<resources>
    <string name="app_name">TalegateInstagram</string>
    <string name="enter_username">Enter your email or username</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="describe">Describe this photo\u2026</string>
    <string name="take_picture">Take picture</string>
    <string name="your_photo">Your photo</string>
    <string name="post">Post!</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="enter_an_email">Enter an email</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_a_handle">Enter a handle</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="received_image">Received image</string>
</resources>
